--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -1,5 +1,10 @@
-.pb4.pt3
+.pb4.pt4
   .container
+    .row
+      .col-xs-12.footer__social-links
+        %a.footer__social_link F
+        %a.footer__social_link T
+        %a.footer__social_link I
     .row
       .col-xs-12
         .table-display
