--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -2,9 +2,12 @@
   .container
     .row
       .col-xs-12.footer__social-links
-        %a.footer__social_link F
-        %a.footer__social_link T
-        %a.footer__social_link I
+        %a.footer__social_link
+          = icon "facebook-f"
+        %a.footer__social_link
+          = icon "twitter"
+        %a.footer__social_link
+          = icon "instagram"
     .row
       .col-xs-12
         .table-display
