footer icon fixes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,8 +20,7 @@
  //////////////////////
  // Vendored Libraries
  /////////////////////
-//= require _font-awesome-sprockets
-//= require _font-awesome
+//= require font-awesome-sass
 //= require bootstrap-custom
 
 //////////////////////////////////////////
