--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -3,8 +3,8 @@
     .row
       .col-xs-12.footer__social-links
         %a.footer__social_link
-          = icon "facebook-f"
-        %a.footer__social_link
+          = icon "facebook"
+        %a.footer__social_link(href="https://twitter.com/Gift_Wrapt" target="_blank")
           = icon "twitter"
         %a.footer__social_link
           = icon "instagram"
