FB and insta links

--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -2,11 +2,11 @@
   .container
     .row
       .col-xs-12.footer__social-links
-        %a.footer__social_link
+        %a.footer__social_link(href="https://facebook.com/GiftWrapt" target="_blank")
           = icon "facebook"
         %a.footer__social_link(href="https://twitter.com/Gift_Wrapt" target="_blank")
           = icon "twitter"
-        %a.footer__social_link
+        %a.footer__social_link(href="https://instagram.com/giftwrapt" target="_blank")
           = icon "instagram"
     .row
       .col-xs-12
