--- a/app/views/home/_after_wrapper.haml
+++ b/app/views/home/_after_wrapper.haml
@@ -1,7 +1,7 @@
 .container.home__after-hero
   .row
     .col-xs-12.col-sm-10.col-sm-offset-1
-      %h3.text-center.home__after-hero__site-description Wrapt is a fun and easy way to find inspired gifts that match who they are, with stories they will love.
+      %h3.text-center.home__after-hero__site-description.light Wrapt is a fun and easy way to find inspired gifts that match who they are, with stories they will love.
   .row
     .col-xs-12
       .new-quiz__about
