--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -1,10 +1,10 @@
 .home__hero
   .home__hero-text
-    %h1
+    %h1.light
       Gift Better.
       %br
       Gift Wrapt.
-    %p
+    %p.light
       We use the science of gifting to find the best gifts for you,
       %br
       while doing a little good in the world
