--- a/app/views/admin/reports/_activity_report_details.haml
+++ b/app/views/admin/reports/_activity_report_details.haml
@@ -157,7 +157,19 @@
                       %li
                         '#{truncate(rec.gift.title, length: 60)}' (#{rec.gift.wrapt_sku})
                         - if !rec.random?
+                          = "#{rec.score.round}" if rec.score.round > 1
                           %span.glyphicon.glyphicon-star
+                  
+                  Parameters:
+                  %ul
+                    - stats = profile.recommendation_stats
+                    - if stats[:filters].is_a?(Array)
+                      - stats[:filters].each do |filter|
+                        %li #{filter[:name]} Filter: #{filter[:description]}
+  
+                    - if stats[:scorers].is_a?(Array)
+                      - stats[:scorers].each do |scorer|
+                        %li #{scorer[:name]} Scoring: #{scorer[:description]}
 
                 - else
                   = event[:type].humanize
