css adjustments for mobile

--- a/app/assets/stylesheets/modules/_icons.scss
+++ b/app/assets/stylesheets/modules/_icons.scss
@@ -64,6 +64,10 @@ a:active .navbar-static-top__icon-circle {
   width: 22px;
   height: 22px;
 }
+.landing-bottom__icon-gift-better-gift-wrapt {
+  width: 443px;
+  height: 73px;
+}
 use.icon-dislike-use .path1,
 use.icon-dislike-use .path2,
 use.icon-like-use .path1,
