--- a/app/views/home/_after_wrapper.haml
+++ b/app/views/home/_after_wrapper.haml
@@ -1,13 +1,15 @@
+.wrapper--full-bleed__bg-03.pb6
+  .container
+    .row
+      .col-xs-12.col-sm-10.col-sm-offset-1
+        %h3.text-center.home__after-hero__site-description.light Wrapt is a fun and easy way to find inspired gifts that match who they are, with stories they will love.
 .container.home__after-hero
-  .row
-    .col-xs-12.col-sm-10.col-sm-offset-1
-      %h3.text-center.home__after-hero__site-description.light Wrapt is a fun and easy way to find inspired gifts that match who they are, with stories they will love.
   .row
     .col-xs-12
       .new-quiz__about
         .new-quiz__about-intro-wrapper
           .new-quiz__about-intro-content
-            %h2.light.mb1
+            %h2.light.mb1.how-wrapt-works
               How Wrapt Works
 
         .row.home__about-steps
@@ -54,4 +56,4 @@
         Hand made by artisan jeweler Kristin Ford, who combines precious stones with metals to make meaning.
 
 .text-center
-  = embedded_svg 'icon-gift-better-gift-wrapt'
+  = embedded_svg('icon-gift-better-gift-wrapt', class: "landing-bottom__icon-gift-better-gift-wrapt mv5")
