--- a/app/assets/stylesheets/modules/_grid.scss
+++ b/app/assets/stylesheets/modules/_grid.scss
@@ -10,13 +10,11 @@
 }
 
 .wrapper--full-bleed__bg-03 {
-  background: rgba(209,217,232,0.10);
+  background: rgba(209,217,232, 0.10);
   border-bottom: 1px solid #E2E2E2;
-  padding-bottom: 8rem;
 }
 .hero-bg .wrapper--full-bleed__bg-03 {
   border-bottom: none;
-  padding-bottom: 16rem;
 }
 
 .floating-container {
