--- a/app/assets/stylesheets/modules/_nav.scss
+++ b/app/assets/stylesheets/modules/_nav.scss
@@ -2,9 +2,11 @@
 
 .top-navigation__container {
   height: 120px;
-  padding: 0 15px;
-  @media (max-width: $screen-xs-max) {
+  padding: 30px 15px;
+  @media (min-width: $screen-md-min) {
     width: 100%;
+    height: 120px;
+    padding: 30px 15px;
   }
 }
 
@@ -23,7 +25,7 @@
 
 .top-navigation__menu-item {
   display: inline-block;
-  font-size: rem(12);
+  font-size: 12px;
   letter-spacing: 1.8px;
   text-transform: uppercase;
   @include akkurat-bold;
@@ -33,6 +35,11 @@
 
 .top-navigation__brand-link {
   position: relative;
+}
+.top-navigation__brand-link:hover,
+.top-navigation__brand-link:focus,
+.top-navigation__brand-link:active {
+  background-color: transparent;
 }
 .top-navigation__brand-link span {
   position: absolute;
