--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -1,17 +1,22 @@
 .home__hero
-  .home__hero-text
-    %h1.light
-      Gift Better.
-      %br
-      Gift Wrapt.
-    %p.light
-      We use the science of gifting to find the best gifts for you,
-      %br
-      while doing a little good in the world
+  .container.home__hero-text
+    .row
+      .col-sm-10.col-sm-offset-1.col-md-8.col-md-offset-2
+        %h1.light.text-center
+          Gift Better.
+          %br
+          Gift Wrapt.
+.container.home__hero-text-secondary
+  .row
+    .col-lg-8.col-lg-offset-2
+      %p.home__hero-text-secondary__p.light.text-center
+        We use the science of gifting to find the best gifts for you,
+        %br
+        while doing a little good in the world
 
   .container
     .row
-      .hero-overrun.col-xs-12.col-sm-8.col-sm-offset-2
+      .hero-overrun.col-sm-10.col-sm-offset-1
         = simple_form_for @question_response, url: with_invitation_scope(profiles_path), html: {data: {behavior: 'question-response-form'}, class: 'sqr-form'} do |form|
           - if current_user&.admin?
             = hidden_field_tag :survey_id, @survey.id
