--- a/app/views/home/_after_wrapper.haml
+++ b/app/views/home/_after_wrapper.haml
@@ -13,21 +13,24 @@
               How Wrapt Works
 
         .row.home__about-steps
-          .col-sm-4.col-xs-12.about-step
-            .about-step-number.text-center.light 1
-            .text-center
-              %h4.about-step__header Give us a few basics.
-            %p.about-step__description Answer some optional questions about their personality, passions and purpose–it will help us match gifts to them better!
+          .col-sm-4.col-xs-12
+            .about-step
+              .about-step-number.text-center.light 1
+              .text-center
+                %h4.about-step__header Give us a few basics.
+              %p.about-step__description Answer some optional questions about their personality, passions and purpose–it will help us match gifts to them better!
 
-          .col-sm-4.col-xs-12.about-step
-            .about-step-number.light 2
-            %h4.about-step__header We will recommend unique, artisanal items, lovingly made with stories that inspire.
-            %p.about-step__description We’ll share stories about our artisans and impact from each purchase.
+          .col-sm-4.col-xs-12
+            .about-step
+              .about-step-number.light 2
+              %h4.about-step__header We will recommend unique, artisanal items, lovingly made with stories that inspire.
+              %p.about-step__description We’ll share stories about our artisans and impact from each purchase.
 
-          .col-sm-4.col-xs-12.about-step
-            .about-step-number.light 3
-            %h4.about-step__header We send to your gift recipient, Wrapt and delivered, with love.
-            %p.about-step__description Wrapt is ready for your next gift occasion with your profiles saved with their interests, passions and favorites.
+          .col-sm-4.col-xs-12
+            .about-step
+              .about-step-number.light 3
+              %h4.about-step__header We send to your gift recipient, Wrapt and delivered, with love.
+              %p.about-step__description Wrapt is ready for your next gift occasion with your profiles saved with their interests, passions and favorites.
 
 
 .home__gift-examples
